erDiagram
    TOURNAMENT ||--o{ PLAYER : "assigns"
    TOURNAMENT ||--o{ MATCH : "schedules"
    TEAM ||--o{ PLAYER : "kader"
    TEAM }|--|{ team_match
    MATCH}|--|{ team_match

    TOURNAMENT {
        int tid PK
        string tournament_name
        string start_date
        int duration
        int pre_round
        int current_round
        int max_team_size
    }

    TEAM {
        int tid PK
        string team_name
    }

    PLAYER {
        int pid PK
        string pname
        string pemail
        int tid FK "Link to TEAM"
        int trid FK "Link to TOURNAMENT"
    }

    MATCH {
        int mid PK
        int round
        int tid FK "Link to TOURNAMENT"
    }

    TEAM_MATCH {
        int tid PK, FK "Link to TEAM"
        int mid PK, FK "Link to MATCH"
        float points
    }
